# decenter-ai.streamlit.app

./: .gitattributes  .gitignore  .pre-commit-config.yaml  CODE_OF_CONDUCT.md  Contrib.md  Dockerfile  LICENSE  Makefile  README.md  Test1.robot  app.py  environment.yml  main.py  pyproject.toml  pytest.ini  requirements-ml.txt  requirements-test.txt  requirements.txt  setup.cfg  test_app.py  trained_model.sav
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE  dependabot-merge.yml  dependabot.yml
.github/DISCUSSION_TEMPLATE/: q-a.yml
.github/ISSUE_TEMPLATE/: 00-bug.md  10-proposal.md  2-feature_request.md  bug_report.yml  config.yml
.github/workflows/: automated-e2e-test.yml  automated-robot-tests.yml  codeql.yml  dependabot.yml  docker.yml  pytest.yml  python.yml  robot.yml  robot2.yml
.streamlit/: config.toml
config/: __init__.py  constants.py  log.py  log_config.ini  open_ai.py  pinecone.py  test_log.py
database/: chromadb.py  pinecone_db.py
enums/: app_v3.py  model_trainer.py
examples/: income.csv  linear-regression.ipynb  linear-regression.py  logistic-regression.py  requirements.txt
models/: model.py
pages/: 0_📈_Plotting_Demo.py  1_v1.py  2_v2.py
prompts/: clarifai-validate-python.txt
public/: __init__.py  index.css  report-request-feature-buttons.html
spec/: v.txt  v1.txt  v2.txt
static/: home.html  index.html  redirect.html  style.css
tests/: MVP.robot  Test1.robot  v1.robot  v2.robot
utils/: archive.py  exec_commands.py  format_display_code.py  helper_find.py  install_deps.py  test_archive.py
utils/ai/: doc.md  (+1 more)
views/: head.py  train.py
(+26 files in other folders)
