[tool.poetry]
name = "decenter-ai-streamlit-app"
version = "3.0.0"
description = "Official decenter ai infra app"
authors = ["Nasfame <laciferin@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.9.1"
clarifai = "^9.8.1"
clarifai-grpc = "^9.8.2"
colorama = "^0.4.6"
colored = "^2.2.3"
gtts = ">=2.3.2,<2.4.0"
icecream = "^2.1.3"
joblib = "^1.3.2"
langchain = "^0.0.289"
numpy = "^1.25.2"
openai = "^0.28.0"
pandas = "^2.1.0"
pinecone-client = "^2.2.2"
pytest = ">=7.4.0,<7.5.0"
python-dotenv = "1.0.0"
requests = ">=2.31.0,<2.32.0"
scikit-learn = "^1.3.0"
streamlit = "1.26.0"


[tool.poetry.group.dev.dependencies]
flake8 = "^6.1.0"
pytest-benchmark = "^4.0.0"
flake8-in-file-ignores = "^0.2.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
